etl-service-trigger/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: your-ns
  name: etl-trigger-svc
  labels:
    app: etl-trigger
spec:
  ports:
  - name: etl-trigger
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: etl-trigger
  type: ClusterIP
